--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-!**/src/target/**/out
+###!**/src/target/**/out
 
 ### Eclipse ###
 .apt_generated
