--- a/src/main/resources/.gitlab-ci.yaml
+++ b/src/main/resources/.gitlab-ci.yaml
@@ -1,7 +1,26 @@
-stages:
-  - build
+name: CI
+on:
+  push:
+    branches:
+      - main
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '11'
+      - name: Build application
+        run: |
+          mvn clean install
 
-build-java-project:
-  stage: build
-  script:
-    mvn package
+      - name: Check if build failed
+        run: |
+          if [ $? -ne 0 ]; then
+            echo "Build failed"
+            exit 1
+          fi
