Проверяем работу CI

--- a/src/main/resources/.gitlab-ci.yml
+++ b/src/main/resources/.gitlab-ci.yml
@@ -11,13 +11,5 @@ build:
     - npm run build
   artifacts:
     paths:
-      -dist/
+      - build/
     expire_in: 30 days
-    reports:
-    access: none
-    name:
-    expose_as:
-    untracked: false
-    exclude:
-      -
-    when: on_success
