--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,3 +10,15 @@ build:
   artifacts:
     paths:
       - target/
+publish:
+  stage: publish
+  image: docker:stable
+  services:
+    - docker:dind
+  script:
+    - docker build -t Intabia-Internship-1.0-SNAPSHOT.jar  .
+    - docker login -u m.kuzmin -p PrewarGlassOfWhiskey2024 https://registry.intabia.ru/harbor/projects/62/repositories
+    - docker tag Intabia-Internship-1.0-SNAPSHOT.jar  https://registry.intabia.ru/harbor/projects/62/repositories/Intabia-Internship-1.0-SNAPSHOT.jar
+    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/Intabia-Internship-1.0-SNAPSHOT.jar
+    - docker-compose up -d
+
