Переделал CI код под мавен

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ build:
     paths:
       - target/
 publish:
-  stage: publish
+  stage: build
   image: docker:stable
   services:
     - docker:dind
@@ -21,4 +21,7 @@ publish:
     - docker tag Intabia-Internship-1.0-SNAPSHOT.jar  https://registry.intabia.ru/harbor/projects/62/repositories/Intabia-Internship-1.0-SNAPSHOT.jar
     - docker push https://registry.intabia.ru/harbor/projects/62/repositories/Intabia-Internship-1.0-SNAPSHOT.jar
     - docker-compose up -d
+  artifacts:
+    paths:
+    - Intabia-Internship-1.0-SNAPSHOT.jar
 
