--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,13 @@ publish:
   services:
     - docker:dind
   script:
-    - docker build -t intabia-internship-1.0-snapshot  .
+    - docker build -t .
     - docker login -u m.kuzmin -p PrewarGlassOfWhiskey2024 https://registry.intabia.ru/harbor/projects/62/repositories
-    - docker tag intabia-internship-1.0-snapshot  https://registry.intabia.ru/harbor/projects/62/repositories/intabia-internship-1.0-snapshot
-    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/intabia-internship-1.0-snapshot
+    - docker tag .  https://registry.intabia.ru/harbor/projects/62/repositories/.
+    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/.
     - docker-compose up -d
   artifacts:
     paths:
-    - intabia-internship-1.0-snapshot
+    - .
 
 
