--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,11 @@ publish:
   services:
     - docker:dind
   script:
-    - docker build -t .
+    - docker build -t library-spring-app .
     - docker login -u m.kuzmin -p PrewarGlassOfWhiskey2024 https://registry.intabia.ru/harbor/projects/62/repositories
-    - docker tag .  https://registry.intabia.ru/harbor/projects/62/repositories/.
-    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/.
+    - docker tag library-spring-app https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
+    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
     - docker-compose up -d
-  artifacts:
-    paths:
-    - .
+
 
 
