--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,10 +16,10 @@ publish:
   services:
     - docker:dind
   script:
-    - docker build -t LibraryDockerfile .
+    - docker build -t library-spring-app .
     - docker login -u m.kuzmin -p PrewarGlassOfWhiskey2024 https://registry.intabia.ru/harbor/projects/62/repositories
-    - docker tag LibraryDockerfile https://registry.intabia.ru/harbor/projects/62/repositories/LibraryDockerfile
-    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/LibraryDockerfile
+    - docker tag library-spring-app https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
+    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
 
 
 
