--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,9 +18,9 @@ publish:
     - docker:dind
   script:
     - docker build -t library-spring-app .
-    - docker login -u docker-ci  -p qaswedfR3  https://registry.intabia.ru/harbor/projects/62/repositories
-    - docker tag library-spring-app https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
-    - docker push https://registry.intabia.ru/harbor/projects/62/repositories/library-spring-app
+    - docker login -u docker-ci  -p qaswedfR3 registry.intabia.ru
+    - docker tag library-spring-app registry.intabia.ru/library-spring-app
+    - docker push registry.intabia.ru/library-spring-app
 
 
 
