--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ stages:
 
 build:
   stage: build
-  image: maven:latest
+  image: maven:3.9.8
   script:
     - mvn clean install
     - mvn test
@@ -18,6 +18,6 @@ publish:
     - docker:dind
   script:
     - docker build -t internship-library-project:latest .
-    - docker tag internship-library-project:latest registry.intabia.ru/library/internship-library-project:latest
+    - docker tag internship-library-project:latest registry.intabia.ru/Intabia Internship/internship-library-project:latest
     - docker login -u docker-ci -p qaswedfR3 registry.intabia.ru
-    - docker push registry.intabia.ru/library/internship-library-project:latest
+    - docker push registry.intabia.ru/Intabia Internship/internship-library-project:latest
