--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ build:
       - target/
 publish:
   stage: publish
-  image: docker:docker:27.0.3
+  image: docker:27.0.3
   services:
     - docker:dind
   script:
