Переделал CI код под мавен

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@ publish:
     - docker:dind
   script:
     - docker build -t internship-library-project:latest .
-    - docker login -u docker-ci -p qaswedfR3 registry.intabia.ru
+    - docker login -u $HARBOR_USER -p $HARBOR_PASSWORD registry.intabia.ru
     - docker tag internship-library-project:latest registry.intabia.ru/internship-library-project/library:latest
     - docker push registry.intabia.ru/internship-library-project/library:latest
 
