--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - build
   - publish
+  - deploy
 
 build:
   stage: build
@@ -21,4 +22,9 @@ publish:
     - docker login -u $HARBOR_USER -p $HARBOR_PASSWORD registry.intabia.ru
     - docker tag internship-library-project:latest registry.intabia.ru/internship-library-project/library:latest
     - docker push registry.intabia.ru/internship-library-project/library:latest
-
+deploy:
+  stage: deploy
+  script:
+    - docker login -u $HARBOR_USER -p $HARBOR_PASSWORD registry.intabia.ru
+    - docker pull internship-library-project:latest
+    - ./run_tests.sh internship vCVdRyW9
