--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,4 +31,4 @@ deploy:
       echo \"$HARBOR_PASSWORD\" | docker login --username \"$HARBOR_USERNAME\" --password-stdin registry.intabia.ru &&
        docker pull registry.intabia.ru/internship-library-project/library:latest && 
        docker logout registry.intabia.ru && 
-       docker run --name library --network library-network -p 8082:8080 --rm -d registry.intabia.ru/internship-library-project/library:latest"
+       docker run --name library --network library-network -p 8082:8080 --rm -d registry.intabia.ru/internship-library-project/library:latest || true"
