--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,8 +27,8 @@ deploy:
   when: manual
   script:
     - apk update && apk add --no-cache openssh sshpass
-    - sshpass -p "vCVdRyW9" ssh -o StrictHostKeyChecking=no internship@192.168.1.193 "docker stop library || true && docker rmi registry.intabia.ru/internship-library-project/library:latest || true && 
+    - sshpass -p "vCVdRyW9" ssh -o StrictHostKeyChecking=no internship@192.168.1.193 "docker stop library || true && docker rmi registry.intabia.ru/internship-library-project/library:latest || true &&
       echo \"$HARBOR_PASSWORD\" | docker login --username \"$HARBOR_USERNAME\" --password-stdin registry.intabia.ru &&
-       docker pull registry.intabia.ru/internship-library-project/library:latest && 
-       docker logout registry.intabia.ru && docker network create library &&
-       docker run --name library --network library-network -p 8082:8080 --rm -d registry.intabia.ru/internship-library-project/library:latest"
+      docker pull registry.intabia.ru/internship-library-project/library:latest &&
+      docker logout registry.intabia.ru && docker network create library-network || true &&
+      docker run --name library --network library-network -p 8082:8080 --rm -d registry.intabia.ru/internship-library-project/library:latest"
