--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,15 +3,20 @@ spring:
     name: library-service
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
   flyway:
     enabled: true
     locations: classpath:migrations
     baseline-on-migrate: true
+    clean-disabled: false
   datasource:
-    url: jdbc:postgresql://postgres-server-global:5432/dblibrary
-    username: dblibrary
-    password: dblibrary
+    url: jdbc:postgresql://localhost:5432/habrdb
+    username: habrpguser
+    password: pgpwd4habr
   security:
     oauth2:
       client:
